# doogle

./: .gitignore  .travis.yml  catbreeds.json  docker-compose.yml  dogbreeds.json  makefile  readme.md
src/: celerybeat-schedule  manage.py  pyproject.toml
src/animals/: admin.py  models.py
src/animals/fixtures/: breeds.json  tags.json
src/animals/migrations/: 0001_initial.py
src/animals/tests/: factories.py
src/doogle/: asgi.py  beat.py  celery.py  settings.py  urls.py  wsgi.py
src/places/: admin.py  models.py
src/places/fixtures/: cities.json  countries.json  currencies.json  provinces.json  regions.json
src/places/migrations/: 0001_initial.py
src/places/tests/: factories.py  test_models.py
src/shelters/: admin.py  models.py
src/shelters/migrations/: 0001_initial.py
src/shelters/tests/: factories.py  test_models.py
